# gdas-cmaqprep

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
config/: config.yml
docs/: Makefile  conf.py  contributing.rst  index.rst  installation.rst  requirements-docs.txt
docs/_templates/: layout.html
docs/source/: api.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  modules.rst  usage.rst
docs/source/_static/: style.css
src/: __init__.py  create_gdas_omi.py
src/gdas_cmaqprep/: __init__.py  create_gdas_omi.py
tests/: conftest.py  test_config.py
