[metadata]
name = gdas-cmaqprep
version = 1.0.0
author = NOAA Air Resources Laboratory
author_email = barry.baker@noaa.gov
description = A tool for processing GDAS data for CMAQ model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noaa-arl/gdas-cmaqprep
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    # grib2io
    netCDF4
    numpy
    requests
    PyYAML
    xarray

[options.extras_require]
progress =
    tqdm>=4.61.0
test =
    pytest>=6.0
    pytest-cov>=2.0
doc =
    sphinx>=4.0
    sphinx-rtd-theme
dev =
    black
    build
    flake8
    ipython
    isort
    mypy
    twine
    %(progress)s
    %(test)s
    %(doc)s

[options.entry_points]
console_scripts =
    gdas-cmaqprep = gdas_cmaqprep.create_gdas_omi:main

[flake8]
max-line-length = 100
